--- a/src/Home.css
+++ b/src/Home.css
@@ -1,4 +1,8 @@
-/* html, body {margin: 0; height: 100%; overflow: hidden} */
+body {
+    margin: 0;
+    height: 100%;
+    overflow: hidden !important
+}
 
 .header {
     display: flex;
